--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "devDependencies": {
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "23.6.0"
   },
   "name": "api_tdd",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint index.js --fix"
+    "test": "jest",
+    "lint": "eslint src/** test/** --fix"
   },
   "repository": {
     "type": "git",
