--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=false"
+    "secure-mode": "jest --watch --verbose=true --runInBand"
   },
   "repository": {
     "type": "git",
