--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "statements": 80,
+        "branches": 80,
+        "functions": 80,
+        "lines": 80
+      },
+      "./src/services": {
+        "lines": 100
+      }
+    }
+  },
   "scripts": {
     "start": "node src/server.js",
     "test": "jest --coverage --runInBand --forceExit",
