--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     }
   },
   "scripts": {
-    "start": "node src/server.js",
-    "test": "jest --coverage --runInBand --forceExit",
+    "start": "NODE_ENV=prod node src/server.js",
+    "test": "NODE_ENV=test jest --coverage --runInBand --forceExit",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=true --runInBand"
+    "secure-mode": "NODE_ENV=test jest --watch --verbose=true --runInBand"
   },
   "husky": {
     "hooks": {
