--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.18.3",
     "consign": "0.1.6",
+    "cors": "2.8.5",
     "express": "4.16.4",
     "husky": "1.2.0",
     "jwt-simple": "0.5.5",
@@ -59,6 +60,8 @@
     "moment": "2.22.2",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
-    "pg": "7.7.1"
+    "pg": "7.7.1",
+    "uuidv4": "2.0.0",
+    "winston": "3.1.0"
   }
 }
